# kings-of-war-things

./: .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  export.sh  go.mod  install.sh
TM4-fillers/infantry_8x1/: BUILD  infantry_filler_8x1.scad
TM4-inserts/: BUILD  libinsert.scad
TM4-inserts/cavalry_regiment_43/: BUILD  insert_cav_regiment_34.scad
TM4-inserts/infantry_regiment_l-shape_1/: BUILD  insert_l_1.scad
TM4-inserts/infantry_regiment_l-shape_1.5/: BUILD  insert_l_1.5.scad
TM4-inserts/infantry_regiment_side_0.5/: BUILD  insert_regiment_side_0.5.scad
TM4-inserts/infantry_regiment_side_1.5/: BUILD  insert_regiment_side_1.5.scad
TM4-inserts/infantry_troop_side_0.5/: BUILD  insert_troop_side_0.5.scad
bases/: libbase.scad
bases/bm4/infantry-artizan/: BUILD  base.scad
common/: BUILD  kow.scad  libtray.scad  params.scad
exported/TM4 Fillers/Infantry 8x1/: infantry_filler_8x1.stl
exported/TM4 Inserts/Cavalry Regiment 43/: insert_cav_regiment_34.stl
exported/TM4 Inserts/Infantry Regiment L Shape 1/: insert_l_1.stl
exported/TM4 Inserts/Infantry Regiment L Shape 1.5/: insert_l_1.5.stl
exported/TM4 Inserts/Infantry Regiment Side 0.5/: insert_regiment_side_0.5.stl
exported/TM4 Inserts/Infantry Regiment Side 1.5/: insert_regiment_side_1.5.stl
exported/TM4 Inserts/Infantry Troop Side 0.5/: insert_troop_side_0.5.stl
miniature-bases/: BUILD  libbase.scad
miniature-bases/bm4/cavalry-slot/: BUILD  bm4_cavalry_slot.scad
miniature-bases/bm4/infantry-artizan/: BUILD  bm4_infantry_artizan.scad
movement-trays/Plain/: BUILD  plain.scad
tools/: BUILD  openscad.bzl  openscad.sh
tools/stl/: BUILD.bazel  go.mod  normalizer.go
(+45 files in other folders)
