load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stl_lib",
    srcs = ["normalizer.go"],
    importpath = "github.com/oxddr/kings-of-war-things/tools/stl",
    visibility = ["//visibility:private"],
    deps = ["@com_github_hschendel_stl//:go_default_library"],
)

go_binary(
    name = "stl",
    embed = [":stl_lib"],
    visibility = ["//visibility:public"],
)
